# zhisa

./: .gitignore  CONCEPT.md  README.md  analyze_s1_deep.py  audit_eth.py  battle_test_00_inspect_obs.py  battle_test_01_forward.py  check_ds.py  demo_cvar_timing.py  diagnose_renderer.py  download_15m_all.ps1  download_context_all.ps1  download_dataset.ps1  fetch_funding.py  inspect_s1.py  patch_aws.py  pyproject.toml  pytest.ini  repro_env.py  repro_env_trace.py  requirements.txt  run_s1_benchmark.py  run_s1_suite.py  save_render.py  test_backtest.py  test_batch_size.py  test_cvar_gradients.py  test_env_200.py  test_env_debug.py  test_env_speed.py  test_internals.py  test_regime_logic.py  test_s4_micro.py  test_s4_mini.py
benchmarks/: test_bench_pipeline.py
configs/: backtest.yaml  default.yaml  explain_default.yaml  hpopt_default.yaml  model_audit_60.yaml  pipeline_default.yaml  pipeline_full_smoke.yaml  portfolio_rl.yaml  s1_ssl.yaml  s1_ssl_15m_12m.yaml  s1_ssl_1h_12m.yaml  s1_ssl_clean.yaml  s1_ssl_continue.yaml  s2_finetune_15m_12markets_h4h16.yaml  s2_multitimeframe_15m_1h_context.yaml  s2_supervised.yaml  s2_supervised_15m_12markets.yaml  s2b_bc_15m_12markets.yaml  s2b_imitation.yaml  s2b_v2_15m_12markets.yaml  s3_curriculum.yaml  s3_smoke.yaml  s4_cvar_15m_12markets.yaml  s4_cvar_ppo.yaml  s4_ppo_15m_12markets_control.yaml  s4_rl.yaml  s5_continual.yaml  s5_smoke.yaml  s6_dt.yaml  s7_world_model.yaml
data/: funding_rates_BTCUSDT.csv
docs/: MODEL_AUDIT_SUITE.md  PREPARE_S1.md  S1_DATASET_12M_V2.md  s2_multitimeframe_15m_1h_plan.md
scripts/: _check_gaps.py  _quick_traj.py  _verify_prepared.py  aws_finalize_s4_and_shutdown.sh  aws_start_s1_retrain.sh  aws_start_s2_adaptive_from_s1_phase2.sh  aws_start_s2_fixed_from_s1_actual.sh  aws_start_s2_from_s1_actual.sh  aws_train_s1_12m.sh  aws_train_s2_12markets.sh  aws_train_s2_finetune_h4h16.sh  aws_train_s2_multitimeframe_15m_1h.sh  aws_train_s4_after_s2b.sh  bench_dataset.py  bench_regime.py  benchmark_s2_aws.py  build_funding_context.py  build_metrics_context.py  debug_vision.py  evaluate_s2_deep_diagnostics.py  evaluate_s2_stage_readiness.py  evaluate_s2b_checkpoints.py  run_s1_advanced_experiments.py  run_s1_benchmark_expanded.py  s1_deep_diagnostics.py  simulate_backtest.py  simulate_backtest_multi.py  simulate_future.py  simulate_s2_trading.py  test_context_preservation.py  test_cvar_math.py  test_overfitting.py  upgrade_model_weights.py  verify_dataset.py  visualize_decisions.py
tests/: conftest.py  test_advanced_robustness.py  test_backtest.py  test_calibration.py  test_cross_instrument_attention.py  test_cvar.py  test_cvar_ppo.py  test_dataloader_factory_integration.py  test_dataset_perf.py  test_decision_transformer.py  test_download_massive.py  test_dream_env.py  test_dyna_ppo.py  test_env.py  test_expert.py  test_explain_script.py  test_feature_store.py  test_features.py  test_funding_features.py  test_hpopt_objective.py  test_hpopt_runner.py  test_hpopt_script.py  (+67 more)
(+226 files in other folders)
